crates/batchalign/tests/snapshots/contract_suite__json_compat__job_info.snap
---
source: crates/batchalign/tests/json_compat.rs
assertion_line: 204
expression: info
---
{
  "job_id": "550e8400-e29b-41d4-a716-446655440000",
  "status": "running",
  "command": "morphotag",
  "options": {
    "command": "morphotag",
    "override_media_cache": false,
    "retokenize": false,
    "skipmultilang": false,
    "merge_abbrev": false,
    "no_l2_morphotag": false,
    "no_pos_hints": false,
    "review_level": "none"
  },
  "lang": "eng",
  "source_dir": "/data/corpus",
  "total_files": 10,
  "completed_files": 3,
  "current_file": "04DM.cha",
  "file_statuses": [
    {
      "filename": "01DM.cha",
      "status": "done",
      "started_at": "2023-11-14T22:13:20.000Z",
      "finished_at": "2023-11-14T22:13:25.000Z"
    },
    {
      "filename": "04DM.cha",
      "status": "processing",
      "started_at": "2023-11-14T22:13:25.000Z",
      "progress_current": 2,
      "progress_total": 5,
      "progress_stage": "analyzing_morphosyntax",
      "progress_label": "Analyzing morphosyntax"
    }
  ],
  "submitted_at": "2026-01-15T10:00:00.000Z",
  "submitted_by": "192.168.1.1",
  "submitted_by_name": "Lab-Mac-1",
  "num_workers": 4
}
