crates/batchalign/tests/snapshots/contract_suite__json_compat__job_list_item.snap
---
source: crates/batchalign/tests/json_compat.rs
assertion_line: 256
expression: item
---
{
  "job_id": "abc-123",
  "status": "completed",
  "command": "morphotag",
  "lang": "eng",
  "source_dir": "/data/corpus",
  "total_files": 10,
  "completed_files": 10,
  "error_files": 1,
  "diagnosed_files": 2,
  "submitted_at": "2026-01-15T10:00:00.000Z",
  "submitted_by": "192.168.1.1",
  "submitted_by_name": "Lab-Mac-1",
  "completed_at": "2026-01-15T10:05:00.000Z",
  "duration_s": 300.0,
  "num_workers": 4
}
