crates/batchalign/tests/snapshots/contract_suite__json_compat__job_result_response.snap
---
source: crates/batchalign-types/tests/json_compat.rs
expression: resp
---
{
  "job_id": "abc-123",
  "status": "completed",
  "files": [
    {
      "filename": "01DM.cha",
      "content": "@UTF8\n@Begin\n*CHI:\thello .\n@End",
      "content_type": "chat",
      "provenance": {
        "kind": "parsed",
        "entries": []
      }
    },
    {
      "filename": "02DM.cha",
      "content": "",
      "content_type": "chat",
      "error": "Pipeline error: unknown language",
      "provenance": {
        "kind": "not_read"
      }
    }
  ]
}
