crates/batchalign/tests/snapshots/contract_suite__json_compat__job_submission_with_files.snap
---
source: crates/batchalign/tests/json_compat.rs
assertion_line: 92
expression: sub
---
{
  "command": "align",
  "lang": "spa",
  "num_speakers": 2,
  "files": [
    {
      "filename": "01DM_18.cha",
      "content": "@UTF8\n@Begin\n*CHI:\thello .\n@End"
    }
  ],
  "media_files": [],
  "media_mapping": "childes-data",
  "media_subdir": "Eng-NA/MacWhinney",
  "source_dir": "/data/corpus",
  "options": {
    "command": "align",
    "override_media_cache": false,
    "fa_engine": "wav2vec_fa",
    "utr_overlap_strategy": "auto",
    "utr_two_pass": {
      "ca_markers": "enabled",
      "max_exclusion_density": 0.3,
      "tight_buffer_ms": 500,
      "match_mode": {
        "fuzzy": {
          "threshold": 0.85
        }
      }
    },
    "pauses": true,
    "existing_wor_boundaries": "preserve",
    "end_overlap_policy": "preserve_cross_speaker",
    "main_bullets": "derive",
    "wor": true,
    "merge_abbrev": false,
    "bullet_repair": false,
    "review_level": "none"
  },
  "paths_mode": false,
  "source_paths": [],
  "output_paths": [],
  "display_names": [],
  "debug_traces": false,
  "before_paths": []
}
