crates/batchalign/tests/snapshots/contract_suite__json_compat__server_config_full.snap
---
source: crates/batchalign/tests/json_compat.rs
expression: cfg
---
{
  "media_roots": [
    "/data/media",
    "/data/media2"
  ],
  "media_mappings": {
    "aphasia-data": "/nfs/aphasia",
    "childes-data": "/nfs/childes"
  },
  "verbose": 0,
  "default_lang": "spa",
  "max_concurrent_jobs": 4,
  "port": 9000,
  "host": "0.0.0.0",
  "allow_mps": true,
  "max_workers_per_job": 2,
  "job_ttl_days": 14,
  "auto_daemon": true,
  "memory_gate_mb": 2048,
  "worker_health_interval_s": 15,
  "max_concurrent_worker_startups": 1,
  "worker_ready_timeout_s": 300,
  "max_body_bytes_mb": 512,
  "memory_gate_timeout_s": 120,
  "memory_gate_poll_s": 5,
  "memory_warning_mb": 4096,
  "local_lease_ttl_s": 300,
  "memory_tier": null,
  "gpu_startup_mb": null,
  "stanza_startup_mb": null,
  "io_startup_mb": null,
  "fleet_target": null
}
