crates/batchalign/tests/snapshots/contract_suite__json_compat__worker_capabilities.snap
---
source: crates/batchalign-types/tests/json_compat.rs
expression: caps
---
{
  "commands": [
    "align",
    "morphotag",
    "transcribe"
  ],
  "free_threaded": true,
  "infer_tasks": [
    "morphosyntax",
    "fa"
  ],
  "engine_versions": {
    "morphosyntax": null,
    "fa": "wave2vec-fa-v1"
  }
}
